--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,6 +1,10 @@
 // fonts 
 $font-gruppo: 'Gruppo', cursive;
 $font-ubuntu: 'Ubuntu',sans-serif;
+$font-title:  'Kanit', sans-serif;
+$font-content: 'Montserrat', sans-serif;
+// $font-title:;
+// $font-content:;
 // text colors 
 $text-black: #000;
 $text-white: #fff;
