--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -83,13 +83,11 @@
                     text-transform: uppercase;
                     color: #f4f4f4;
                     color: $span-gold;
-                    background-color: $overlay-blue-dark;
-                    font-weight: 800;
-                    font-family: 'Gruppo', cursive;
+                    background-color: $overlay-blue-darker;
+                    font-weight: 500;
                     border: 1px solid $span-gold;
                     padding-left: .15rem;
-                    padding-bottom: .1rem;
-                    border-radius: 5px;
+                    border-radius: .5rem;
                     transition: .2s;
                     // text-shadow: 0 0 5px $text-shadow-red;
 
@@ -101,8 +99,8 @@
                         border: none;
                         outline: none;
                         color: $overlay-blue-dark;
-                        border-top-right-radius: 5px;
-                        border-bottom-right-radius: 5px;
+                        border-top-right-radius: .5rem;
+                        border-bottom-right-radius: .5rem;
                         transition: .2s;
                     }
 
@@ -285,7 +283,7 @@
                             // padding: 1em;
                             display: block;
                             text-align: left;
-                            font-family: 'Gruppo', cursive;
+                            font-family: $font-content;
                             transition: .2s ease-in-out;
                             // link text on hover
                             &::after {
@@ -380,6 +378,7 @@
                             a {
                                 font-size: 1rem;
                                 padding: .5rem;
+                                font-weight: 400;
                                 margin: 0 auto;
                                 display: block;
                                 float: left;
