--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -90,15 +90,16 @@
                     transition: 1.3s ease;
                     // project Title (h1)
                     h1 {
-                        font-size: 1.15em;
+                        font-size: 1.25rem;
                         width: 100%;
                         @media (min-width:1024px){
                             font-size: 1.2rem;
                         }
-                        color: $span-gold;
-                        font-weight: 900;
+                        color: #fff;
+                        font-weight: 500;
                         text-transform: capitalize;
                         line-height: 1em;
+                        font-family: $font-title;
                         letter-spacing: .05em;
                         margin-bottom: .5em;
                         padding-bottom: .5em;
@@ -108,7 +109,7 @@
                     // end of project Title (h1)
                     // project details (h2 and p)
                     h2 {
-                        font-size: 1em;
+                        font-size: 1rem;
                         line-height: 1.3;
                         font-weight: 500;
                         margin: .8em 0;
@@ -147,17 +148,17 @@
                         i {
                             transition: .2s;
                             color: $span-gold;
-                            font-size: .8em;
-                            padding: .2em;
+                            font-size: .5rem;
+                            padding: .5rem;
                             // margin-right: .5em;
                             margin: 1em 0 .5em 0;
                             // icon label (pseudo)
                             &::after {
                                 content: 'view project';
-                                font-family: $font-gruppo;
                                 font-style: italic;
+                                text-transform: capitalize;
                                 color: $text-light;
-                                font-weight: 600;
+                                font-weight: 500;
                                 transition: .3s;
                                 background: linear-gradient(0deg, #3f0d0d, #dc134c);
                                 border-radius: 10px;
