--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,4 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Gruppo&family=Montserrat:wght@200;400;500;700&family=Philosopher:wght@400;700&family=Shippori+Mincho:wght@700&family=Source+Code+Pro:wght@200;300;400&family=Ubuntu:wght@300;400&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Gruppo&family=Montserrat:wght@200;400;500;700&family=Philosopher:wght@400;700&family=Shippori+Mincho:wght@700&family=Source+Code+Pro:wght@200;300;400&family=Ubuntu:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;500;600&family=Montserrat:wght@100;200;400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap');
+
 @import 'variables';
 @import 'utilities';
 @import 'header';
@@ -13,6 +15,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: $font-content;
     // border: 1px solid red;
 }
 
@@ -54,7 +57,7 @@ section {
         font-size: 2.5rem;
         
     }
-    font-weight: 500;
+    font-weight: 400;
     color: #000;
     max-width: 100vw;
     margin: 5vh 0 10vh;
