--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -40,6 +40,7 @@
                 h2 {
                     text-transform: capitalize;
                     font-family: $font-ubuntu;
+                    font-weight: 500;
                     font-size: 1.5rem;
                     margin-bottom: .5rem;
                 }
