text transform cta and header

--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -228,7 +228,7 @@
             span {
                 position: relative;
                 display: inline-block;
-                text-transform: uppercase;
+                text-transform: none;
                 color: $text-light;
                 font-family: $font-title;
                 font-family: $font-content;
