--- a/css/style.css
+++ b/css/style.css
@@ -508,7 +508,7 @@ hamburger
   letter-spacing: 0.15em;
   text-decoration: none;
   color: #fff;
-  text-transform: uppercase;
+  text-transform: capitalize;
   display: block;
   text-align: left;
   font-family: "Montserrat", sans-serif;
@@ -812,7 +812,7 @@ hamburger
 #home .hero #cta-header span {
   position: relative;
   display: inline-block;
-  text-transform: uppercase;
+  text-transform: none;
   color: #f4f4f4;
   font-family: "Kanit", sans-serif;
   font-family: "Montserrat", sans-serif;
