--- a/css/style.css
+++ b/css/style.css
@@ -417,14 +417,17 @@ hamburger
     width: 100%;
     display: block;
     font-size: 1rem;
+    font-weight: 400;
     border-radius: 5px;
+    font-family: "Kanit", sans-serif;
+    text-transform: uppercase;
   }
   #header .header #navbar .nav-list .links-container ul li i {
-    flex-basis: 5%;
+    width: 2.5rem;
     text-align: center;
-    padding: 0.5em;
+    padding: 0.5rem;
     color: #fffa;
-    border: none;
+    border: 1px solid #ead2a1;
   }
   #header .header #navbar .nav-list .links-container.active {
     left: 0;
@@ -814,8 +817,8 @@ hamburger
   display: inline-block;
   text-transform: none;
   color: #f4f4f4;
-  font-family: "Kanit", sans-serif;
   font-family: "Montserrat", sans-serif;
+  font-family: "Kanit", sans-serif;
   font-size: 2.5rem;
   font-weight: 500;
   animation: animate 3s ease-in-out infinite;
