--- a/css/style.css
+++ b/css/style.css
@@ -905,7 +905,6 @@ hamburger
   isolation: isolate;
 }
 #menu .menu-section .menu-img figure {
-  overflow: hidden;
   width: 100%;
   height: 100%;
   position: relative;
@@ -915,28 +914,8 @@ hamburger
   height: 100%;
   object-fit: contain;
 }
-#menu .menu-section .menu-img figure.fig-js img {
-  filter: drop-shadow(0.5rem 0.5rem 0.25rem #000);
-  transform-style: preserve-3d;
-}
-#menu .menu-section .menu-img figure.fig-js:hover img {
-  transition: 1s;
-  animation: imageTransition 3s infinite;
-}
-@keyframes imageTransition {
-  50% {
-    filter: drop-shadow(0 1rem 0.1rem #000);
-    transform: translateY(-2rem) rotateY(10deg);
-  }
-}
 #menu .menu-section .menu-img figure.fig-response {
   animation: responseTransition 3s infinite;
-}
-#menu .menu-section .menu-img figure.fig-response:hover {
-  animation: none;
-}
-#menu .menu-section .menu-img figure.fig-response:hover img {
-  transition: 5s;
 }
 @keyframes responseTransition {
   20% {
@@ -947,6 +926,28 @@ hamburger
   }
   40% {
     transform: scaleY(1);
+  }
+}
+#menu .menu-section .menu-img figure.fig-css img {
+  filter: drop-shadow(0 1rem 0.25rem rgba(0, 0, 0, 0.25));
+  transform-style: preserve-3d;
+  animation: cssTransition 3s infinite;
+}
+@keyframes cssTransition {
+  50% {
+    filter: drop-shadow(0.5rem 0.5rem 0.1rem #000a);
+    transform: rotateY(10deg);
+  }
+}
+#menu .menu-section .menu-img figure.fig-js img {
+  animation: imageTransition 3s infinite;
+  filter: drop-shadow(0.5rem 0.5rem 0.25rem #000);
+  transform-style: preserve-3d;
+}
+@keyframes imageTransition {
+  50% {
+    filter: drop-shadow(0 1rem 0.1rem #000);
+    transform: translateY(-2rem) rotateY(10deg);
   }
 }
 #menu .menu-section .menu-img.io-item img {
