--- a/css/style.css
+++ b/css/style.css
@@ -755,11 +755,13 @@ hamburger
   position: relative;
   display: block;
   text-align: left;
-  padding: 0.5em 1rem;
+  padding: 0.5em 2rem 0.5rem 1rem;
   margin: 1rem 0;
   width: auto;
   width: max-content;
   border-radius: 1rem;
+  border-top-right-radius: 5rem;
+  border-bottom-right-radius: 1rem;
   border: none;
   outline: none;
   opacity: 0;
@@ -793,6 +795,8 @@ hamburger
   width: 100%;
   height: 100%;
   border-radius: 1rem;
+  border-top-right-radius: 5rem;
+  border-bottom-right-radius: 1rem;
   transition: 0.3s ease;
   border: none;
   outline: none;
@@ -855,9 +859,11 @@ hamburger
     transform: scale(0.95);
   }
   #home .hero #cta-header:hover::before {
+    border-top-right-radius: 5rem;
     opacity: 0;
   }
   #home .hero #cta-header:hover::after {
+    border-top-right-radius: 5rem;
     opacity: 1;
   }
 }
