--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -163,11 +163,13 @@
             display: block;
             text-align: left;
             
-            padding: .5em 1rem;
+            padding: .5em 2rem .5rem 1rem;
             margin: 1rem 0;
             width: auto;
             width:max-content;
             border-radius: 1rem;
+            border-top-right-radius: 5rem;
+            border-bottom-right-radius: 1rem;
             border: none;
             outline: none;
             opacity: 0;
@@ -199,6 +201,8 @@
                 width: 100%;
                 height: 100%;
                 border-radius: 1rem;
+                border-top-right-radius: 5rem;
+                border-bottom-right-radius: 1rem;
                 transition: .3s ease;
                 border: none;
                 outline: none;
@@ -276,10 +280,14 @@
                 &:hover {
                     transition: .2s;
                     transform: scale(.95);
+
                     &::before {
+                        border-top-right-radius: 5rem;
                         opacity: 0;
                     }
+
                     &::after {
+                        border-top-right-radius: 5rem;
                         opacity: 1;
                     }
                 }
