--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -147,21 +147,23 @@
                                 justify-content: flex-start;
                                 align-items: center;
                                 margin: 1em auto 1em .5em;
-                                margin: .5rem auto 1rem;
+                                margin: .5rem auto;
                                 width: 95%;
 
 
                                 a {
+                                    // border: 1px solid yellow;
+                                    // border-bottom: 1px dashed $span-gold;
                                     margin-right: auto;
                                     padding: .5em 0;
                                     width: 100%;
                                     display: block;
                                     font-size: 1rem;
-                                    font-weight: 400;
-                                    // border: 1px solid yellow;
-                                    border-radius: 5px;
+                                    font-weight: 500;
+                                    // border-radius: 5px;
                                     font-family: $font-title;
-                                    text-transform: uppercase;
+                                    font-family: $font-content;
+                                    text-transform: capitalize;
                                     // background-color: $overlay-blue-darker;
                                 }
 
@@ -276,12 +278,11 @@
                         }
 
                         a {
-                            font-size: 1rem;
                             font-weight: 400;
                             letter-spacing: .15em;
                             text-decoration: none;
                             color: $text-white;
-                            text-transform: capitalize;
+                            text-transform: uppercase;
                             // padding: 1em;
                             display: block;
                             text-align: left;
