--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -122,13 +122,13 @@
                     }
                     
                     p {
-                        font-size: .8em;
+                        font-size: 1rem;
                         @media (min-width:768px){
-                            font-size: .9em;
+                            // font-size: .9em;
                         }
                         font-weight: 300;
-                        color: #f4f4f4;
-                        margin: .5em 0;
+                        color: #ffff;
+                        margin: .5rem 0;
                     }
                     // end of project details (h2 and p)
                     // project link icon
@@ -154,11 +154,13 @@
                             margin: 1em 0 .5em 0;
                             // icon label (pseudo)
                             &::after {
-                                content: 'view project';
-                                font-style: italic;
-                                text-transform: capitalize;
+                                content: 'view';
+                                text-transform: lowercase;
+                                // font-style: italic;
+                                letter-spacing: .15rem;
+                                // text-transform: capitalize;
                                 color: $text-light;
-                                font-weight: 500;
+                                font-weight: 300;
                                 transition: .3s;
                                 background: linear-gradient(0deg, #3f0d0d, #dc134c);
                                 border-radius: 1rem;
