--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -155,12 +155,12 @@
             article {
                 &.about-article {
                     padding: .5em 1em;
-                    height: 15vh;
+                    height: 17vh;
                     // overflow: hidden;
                     transition: .3s ease;
 
                     @media (max-width: 768px) {
-                        height: 20vh;
+                        height: 23vh;
                         transition: .3s ease;
                         padding: .5em 0;
                     }
@@ -171,13 +171,12 @@
 
                     // about me paragraph
                     p {
-                        padding: .2em;
-                        margin-bottom: 1em;
+                        padding: .5rem;
+                        margin-bottom: 1rem;
                         text-overflow: ellipsis;
                         text-align: left;
                         z-index: 1;
-                        font-size: .85em;
-                        font-weight: 500;
+                        font-size: .96rem;
                         font-family: $font-content;
 
 
@@ -193,7 +192,7 @@
                         }
 
                         &#intro {
-                            font-weight: 600;
+                            font-weight: 500;
                         }
 
                         &.about-body {
