--- a/css/style.css
+++ b/css/style.css
@@ -920,11 +920,11 @@ hamburger
   object-fit: contain;
 }
 #menu .menu-section .menu-img figure.fig-response {
-  animation: responseTransition 3s infinite;
+  animation: responseTransition 5s infinite;
 }
 @keyframes responseTransition {
-  20% {
-    transform: scaleY(180%);
+  5% {
+    transform: scaleY(140%);
   }
   30% {
     transform: scaleX(110%);
@@ -1100,7 +1100,24 @@ hamburger
     background-attachment: fixed;
   }
   #menu .menu-section .menu-img {
-    display: none;
+    position: absolute;
+    right: 5vw;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 45%;
+    height: 50%;
+    border: 1px solid #fff;
+    border-radius: 0.5rem;
+  }
+  #menu .menu-section .menu-img figure {
+    position: relative;
+    width: 100%;
+    height: 100%;
+  }
+  #menu .menu-section .menu-img figure img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
   }
   #menu .menu-section .menu-content {
     width: 50%;
@@ -1130,15 +1147,6 @@ hamburger
     height: 100%;
     background: rgba(0, 0, 0, 0.3);
     z-index: -1;
-  }
-  #menu .menu-section#menu-1 {
-    background-image: url(../hero/peter-bo-faMPQuSe4Wo-unsplash-bg.jpg);
-  }
-  #menu .menu-section#menu-2 {
-    background-image: url(../hero/walling-XLqiL-rz4V8-unsplash.jpg);
-  }
-  #menu .menu-section#menu-3 {
-    background-image: url(../img/altumcode-U0tBTn8UR8I-unsplash.jpg);
   }
 }
 
