--- a/css/style.css
+++ b/css/style.css
@@ -764,9 +764,9 @@ hamburger
   border: none;
   outline: none;
   opacity: 0;
-  transform: translateY(10vh);
+  transform: translateX(-10vw);
   transform-style: preserve-3d;
-  animation: show-cta 4s 5.5s;
+  animation: show-cta 3s ease-in-out 5.5s;
   animation-fill-mode: forwards;
   transition: 0.3s linear;
   cursor: pointer;
@@ -781,9 +781,13 @@ hamburger
   }
 }
 @keyframes show-cta {
+  60% {
+    opacity: 1;
+    transform: scale(1) translateX(2rem);
+  }
   100% {
     opacity: 1;
-    transform: scale(1) translateY(0);
+    transform: translateX(0);
   }
 }
 #home .hero #cta-header::before, #home .hero #cta-header::after {
