--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -173,9 +173,9 @@
             border: none;
             outline: none;
             opacity: 0;
-            transform: translateY(10vh);
+            transform: translateX(-10vw);
             transform-style: preserve-3d;
-            animation: show-cta 4s 5.5s;
+            animation: show-cta 3s ease-in-out 5.5s;
             animation-fill-mode: forwards;
             transition: .3s linear;
             cursor: pointer;
@@ -184,9 +184,15 @@
 
             // show cta
             @keyframes show-cta {
+                60% {
+                    opacity: 1;
+                    // transition: ease-out;
+                    transform: scale(1) translateX(2rem);
+                }
                 100% {
                     opacity: 1;
-                    transform: scale(1) translateY(0);
+                    // transition: ease-in;
+                    transform: translateX(0);
                 }
             }
 
