--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -379,23 +379,23 @@
                     }
                 }
                 // IMMERSIVE STYLE
-                &.fig-css {
+                &.fig-js {
                     img {
-                        filter: drop-shadow(0 1rem .25rem rgba(0,0,0,.250));
+                        filter: drop-shadow(0 .5rem .15rem #000);
 
                         transform-style: preserve-3d;
                         animation: cssTransition 3s infinite;
                         @keyframes cssTransition {
                             50% {
-                                filter: drop-shadow(.5rem .5rem .1rem #000a);
+                        filter: drop-shadow(.5rem 1rem .25rem rgba(0,0,0,.250));
 
-                                transform: rotateY(10deg);
+                                transform: rotateY(10deg) scale(1.08);
                             }
                         }
                     }
                 }
                 // ENGAGING STYLE
-                &.fig-js {
+                &.fig-css {
                     img {
                         animation: imageTransition 3s infinite;
                     filter: drop-shadow(.5rem .5rem .25rem #000);
