--- a/css/style.css
+++ b/css/style.css
@@ -923,7 +923,11 @@ hamburger
   height: 100%;
   object-fit: contain;
 }
-#menu .menu-section .menu-img figure.fig-response {
+#menu .menu-section .menu-img.io-item img {
+  transform: scale(0.5);
+  transition: 0.3s;
+}
+#menu .menu-section .menu-img.active-item figure.fig-response {
   animation: responseTransition 5s infinite;
 }
 @keyframes responseTransition {
@@ -937,7 +941,7 @@ hamburger
     transform: scaleY(1);
   }
 }
-#menu .menu-section .menu-img figure.fig-js img {
+#menu .menu-section .menu-img.active-item figure.fig-js img {
   filter: drop-shadow(0 0.5rem 0.15rem #000);
   transform-style: preserve-3d;
   animation: cssTransition 3s infinite;
@@ -948,7 +952,7 @@ hamburger
     transform: rotateY(10deg) scale(1.08);
   }
 }
-#menu .menu-section .menu-img figure.fig-css img {
+#menu .menu-section .menu-img.active-item figure.fig-css img {
   animation: imageTransition 3s infinite;
   filter: drop-shadow(0.5rem 0.5rem 0.25rem #000);
   transform-style: preserve-3d;
@@ -958,10 +962,6 @@ hamburger
     filter: drop-shadow(0 1rem 0.1rem #000);
     transform: translateY(-2rem) rotateY(10deg);
   }
-}
-#menu .menu-section .menu-img.io-item img {
-  transform: scale(0.5);
-  transition: 0.3s;
 }
 #menu .menu-section .menu-img.active-item img {
   transition: 1s ease-out;
@@ -1110,7 +1110,6 @@ hamburger
     transform: translateY(-50%);
     width: 45%;
     height: 50%;
-    border: 1px solid #fff;
     border-radius: 0.5rem;
   }
   #menu .menu-section .menu-img figure {
